# marios-mask

./: .gitignore  GITHUB_RELEASE.md  Makefile  PROVENANCE.md  README.md  RELEASE_NOTES.md  RELEASE_V0.1_ALPHA.md  ROADMAP.md  VALIDATION.md  release-manifest.sha256  tuning.yaml
app/: marios_mask_builder.py  test_marios_mask_builder.py
docs/: FIREHOSE.md  MAINTAINER_RELEASE_SOP.md  N64_INVARIANTS.md  XGAME_METAMORPHIC.md
packaging/: audit_binary_package.py  build_gui.py  environment-posix.yml  environment-windows-python.yml
patcher/: Cargo.toml
patcher/recipe/: marios-mask-alpha2.mm2p  marios-mask-alpha3.mm2p  marios-mask-alpha6.mm2p
patcher/src/: lib.rs  main.rs
patches/: 0001-dsce-hooks.patch  0003-dsce-audio-sequencer-debug.patch  0004-aseq-structure-guards.patch  README.md
src/: dsce_adapters.c  dsce_hook.c  dsce_mario_compat.h  dsce_mario_dialogue.c  dsce_mario_model.c  dsce_n64_abi.h  dsce_peach_model.c  dsce_telemetry.h  dsce_xtest_arena.h
tools/: build-binutils.sh  build_from_roms.sh  check_acquisition_boot.py  check_content_contracts.py  check_n64_invariants.py  check_release_contract.py  check_sequence_span.py  check_sfx_dispatch_alignment.py  check_sfx_font_selectors.py  firehose_diagnose.py  firehose_from_savestate.py  firehose_ingest.py  firehose_query  gen_geo_parts.py  gen_mario_anims.py  gen_mario_sfx.py  gen_mask_item_art.py  gen_triforce.py  gen_tuning.py  gen_xtest_arena.py  headless-run.sh  headless_wall_probe.py  insert_frag.py  normalize_rom.py  release_audit.py  run_debug_release.py  run_tests.py  seed-save.sh  stage-cosmetics.sh  (+10 more)
(+16 files in other folders)
